# caldp

./: .gitignore  .gitmodules  .travis.yml  ACS_WFC3_filters.txt  Dockerfile  MANIFEST.in  README.rst  STSCICA.crt  ascii_fix.patch  caldp-setup  changelog.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/actions/release/: tag_or_release.sh
.github/workflows/: build.yml  checks.yml  docker.yml
caldp/: __init__.py  _astropy_init.py  conftest.py  create_previews.py  exit_codes.py  file_ops.py  log.py  main.py  messages.py  process.py  sysexit.py  utility.py
caldp/tests/: acs_8ph_01_input.out  skycell-p2381x06y09_input.out  test_all.py  test_process.py
docs/: conf.py  index.rst
docs/caldp/: index.rst
docs/hstdp/: index.rst
envs/: hstdp-2018.3a-linux-py36.yml  hstdp-2019.2-linux-py36.yml
licenses/: LICENSE.rst
scripts/: README.md  caldp-cal-env-github-actions  caldp-config-aws  caldp-config-offsite  caldp-config-onsite  caldp-create-previews  caldp-docker-run-container  caldp-docker-run-pipeline  caldp-ecr-login  caldp-get-output-path  caldp-image-build  caldp-image-config  caldp-image-login  caldp-image-push  caldp-image-sh  caldp-install-all  caldp-install-cal  caldp-install-conda  caldp-install-fitscut  caldp-onsite-process  caldp-process  caldp-process-aws  caldp-process-core  caldp-remote-process  caldp-sh  caldp-shim  caldp-test  crds_s3_get  fix-certs
