[metadata]
name = caldp
author = STScI
author_email = helpdesk@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://stsci.edu
description = Calibration data pipeline for Hubble Space Telescope Observations
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = spacetelescope/caldp

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
caldp = data/*

[tool:pytest]
testpaths = "caldp" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    caldp/_astropy_init*
    caldp/conftest.py
    caldp/*setup_package*
    caldp/tests/*
    caldp/*/tests/*
    caldp/extern/*
    caldp/version*
    */caldp/_astropy_init*
    */caldp/conftest.py
    */caldp/*setup_package*
    */caldp/tests/*
    */caldp/*/tests/*
    */caldp/extern/*
    */caldp/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
